[platform] deprecations in `FileTypeManager`
- replacing usages of deprecated file type registration methods in tests
- dropping no longer used methods, adding deprecation errors to remaining ones

GitOrigin-RevId: 62da1e2ea1e4dbf165d5bc1c4d1a58c0b9051fbb